vest-dsl/test/bad/choice_enum_unbound.vest
t = enum {
  A = 1,
  B = 2,
  C = 3,
}

fmt = choose(@tag) {
  A => u8,
  B => u16,
  C => u24,
}
